--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 COVID-19[[:space:]]Very[[:space:]]Large[[:space:]]Dataset/** filter=lfs diff=lfs merge=lfs -text
+test[[:space:]]CT[[:space:]]Covid19/** filter=lfs diff=lfs merge=lfs -text
+greatXrayCTMultiClassCovid19Model2/** filter=lfs diff=lfs merge=lfs -text
