--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 COVID-19[[:space:]]Very[[:space:]]Large[[:space:]]Dataset/** filter=lfs diff=lfs merge=lfs -text
 test[[:space:]]CT[[:space:]]Covid19/** filter=lfs diff=lfs merge=lfs -text
 greatXrayCTMultiClassCovid19Model2/** filter=lfs diff=lfs merge=lfs -text
+greatCTCovid19ModelGC2/** filter=lfs diff=lfs merge=lfs -text
