--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ COVID-19[[:space:]]Very[[:space:]]Large[[:space:]]Dataset/** filter=lfs diff=lfs
 test[[:space:]]CT[[:space:]]Covid19/** filter=lfs diff=lfs merge=lfs -text
 greatXrayCTMultiClassCovid19Model2/** filter=lfs diff=lfs merge=lfs -text
 greatCTCovid19ModelGC2/** filter=lfs diff=lfs merge=lfs -text
+Covid19detectionXraymodelgood22/** filter=lfs diff=lfs merge=lfs -text
